--- a/.github/workflows/expression-functions.yml
+++ b/.github/workflows/expression-functions.yml
@@ -35,7 +35,7 @@ jobs:
           echo "Hash of files: ${{ hashFiles('**/package-lock.json', '**/Gemfile.lock') }}"
       - name: The job has succeeded
         if: ${{ success() }}
-        run: success
+        run: echo "success"
       - name: The job has failed
         if: ${{ failure() }}
-        run: failure
+        run: echo "failure"
