--- a/.github/workflows/workflow-context.yml
+++ b/.github/workflows/workflow-context.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - name: action context
         env:
-          GITHUB_CONTEXT: ${{ github.action }}
-        run: echo $GITHUB_CONTEXT
+          GITHUB_SEC: ${{ secrets.SEC }}
+        run: echo $GITHUB_SEC
