--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -6,7 +6,7 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: ./scripts
+                working-directory: /scripts
         steps:
         - name: run script
           run: script.sh
