--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -8,5 +8,7 @@ jobs:
             run:
                 working-directory: ./scripts
         steps:
-        - name: run script
-          run: script.sh
+            - name: Check out repository
+              uses: actions/checkout@v3
+            - name: run script
+              run: ./script.sh
