--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -10,5 +10,7 @@ jobs:
         steps:
             - name: Check out repository
               uses: actions/checkout@v3
+            - name: Set up permission
+              run: chmod +x ./script.sh
             - name: run script
               run: ./script.sh
